--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -575,32 +575,31 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span> – Set
       setting. Last argument will ignore if background is not scrollable.<br>
       <br>
-      <span style="font-style: italic;"> void Background::load_background(Image
+      <span style="font-style: italic;"> void Background::load(Image
         *background,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
       – Load background </big><big>from the buffer</big><big>.<br>
       <br>
-      <span style="font-style: italic;"> void Background::load_background(Image
+      <span style="font-style: italic;"> void Background::load(Image
         &amp;background,const EUGENEGDK::IMAGE_KIND kind,const unsigned int
         frames);</span> – Load background </big><big>from the buffer</big><big>.<br>
       <br>
-      <span style="font-style: italic;"> void Background::load_background(Image
+      <span style="font-style: italic;"> void Background::load(Image
         *background);</span> – Load normal background from the buffer.<br>
       <br>
-      <span style="font-style: italic;"> void Background::load_background(Image
+      <span style="font-style: italic;"> void Background::load(Image
         &amp;background);</span> – Load normal background </big><big>from the
       buffer</big><big>.<br>
       <br>
-      <span style="font-style: italic;">void Background::load_background(const
-        char *name,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
+      <span style="font-style: italic;">void Background::load(const char
+        *name,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
       – Load background </big><big>from target file</big><big>.<br>
       <br>
-      <span style="font-style: italic;">void Background::load_background(</span></big><big
-
+      <span style="font-style: italic;">void Background::load(</span></big><big
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
-      <span style="font-style: italic;"> void Background::draw_background();</span>
-      – Draw a background.<br>
+      <span style="font-style: italic;"> void Background::draw();</span> – Draw
+      a background.<br>
       <br>
       <span style="font-style: italic;"> void Background::destroy_image();</span>
       – Destroy a background image.<br>
@@ -610,6 +609,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="font-style: italic;"> unsigned int Background::get_frame()
         const;</span> – Return current frame in scrollable background.<br>
+      <br>
       <span style="font-style: italic;"> unsigned int Background::get_frames()
         const;</span> – Return frame amount in scrollable background.<br>
       <br>
@@ -719,18 +719,18 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       information.<br>
       <br>
     </big><big> </big><big><span style="font-style: italic;">void
-        Billboard::draw_sprite();</span> – Draw a sprite.<br>
+        Billboard::draw();</span> – Draw a sprite.<br>
       <br>
-    </big> <big><span style="font-style: italic;"> void
-        Billboard::draw_sprite(const unsigned int x, const unsigned int y);</span>
-      – Set sprite position and draw it.<br>
+    </big> <big><span style="font-style: italic;"> void Billboard::draw(const
+        unsigned int x, const unsigned int y);</span> – Set sprite position and
+      draw it.<br>
       <br>
-    </big> <big><i>void Billboard::draw_sprite(const bool transparency);</i> –
-      Set transparent mode and draw a sprite.<br>
+    </big> <big><i>void Billboard::draw(const bool transparency);</i> – Set
+      transparent mode and draw a sprite.<br>
       <br>
-    </big> <big><i>void Billboard::draw_sprite(const bool transparency,const
-        unsigned int x, const unsigned int y);</i> – Set transparent mode and
-      draw a sprite at target position.</big><br>
+    </big> <big><i>void Billboard::draw(const bool transparency,const unsigned
+        int x, const unsigned int y);</i> – Set transparent mode and draw a
+      sprite at target position.</big><br>
     <big> </big>
     <h2><a name="mozTocId662651" class="mozTocH2"></a><big> Chapter 8. Ordinary
         sprites</big></h2>
@@ -757,29 +757,27 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span> – Set
       sprite setting. Last argument will ignore if sprite not animated.<br>
       <br>
-      <span style="font-style: italic;"> void Sprite::load_sprite(Image
-        *buffer,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
-      – Load a sprite from the buffer and set it setting.<br>
+      <span style="font-style: italic;"> void Sprite::load(Image *buffer,const
+        EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span> – Load a
+      sprite from the buffer and set it setting.<br>
       <br>
-      <span style="font-style: italic;"> void Sprite::load_sprite(Image
-        *buffer);</span> – Load a normal sprite </big><big>from the buffer</big><big>.<br>
+      <span style="font-style: italic;"> void Sprite::load(Image *buffer);</span>
+      – Load a normal sprite </big><big>from the buffer</big><big>.<br>
       <br>
-      <span style="font-style: italic;"> void Sprite::load_sprite(Image
+      <span style="font-style: italic;"> void Sprite::load(Image
         &amp;buffer,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
       – Load a sprite </big><big>from the buffer</big><big> and set it setting.<br>
       <br>
-      <span style="font-style: italic;"> void Sprite::load_sprite(Image
-        &amp;buffer);</span> – Load a normal sprite </big><big>from the buffer</big><big>.<br>
+      <span style="font-style: italic;"> void Sprite::load(Image &amp;buffer);</span>
+      – Load a normal sprite </big><big>from the buffer</big><big>.<br>
       <br>
-      <span style="font-style: italic;">void Sprite::load_sprite(const char
-        *name,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
-      – Load a sprite </big><big>from target file</big><big> and set it
-      setting.<br>
+      <span style="font-style: italic;">void Sprite::load(const char *name,const
+        EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span> – Load a
+      sprite </big><big>from target file</big><big> and set it setting.<br>
       <br>
-      <span style="font-style: italic;">void Sprite::load_sprite(</span></big><big
-
-      style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
-      – Load a normal sprite from target file.<br>
+      <span style="font-style: italic;">void Sprite::load(</span></big><big style="font-style: italic;">const
+      char *name</big><big><span style="font-style: italic;">);</span> – Load a
+      normal sprite from target file.<br>
       <br>
       <span style="font-style: italic;"> void Sprite::set_target(const unsigned
         int target);</span> – Set target frame in strip.<br>
@@ -834,10 +832,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       public methods.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -866,18 +866,17 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Increase number of target frame. Set it to 1 if number of target frame
       more than frame amount.<br>
       <br>
-    </big> <big><span style="font-style: italic;"> void
-        Sheet::load_tileset(Image *sheet,const unsigned int row_amount,const
-        unsigned int column_amount);</span> – Load a sprite sheet from the
-      buffer.<br>
+    </big> <big><span style="font-style: italic;"> void Sheet::load(Image
+        *sheet,const unsigned int row_amount,const unsigned int column_amount);</span>
+      – Load a sprite sheet from the buffer.<br>
       <br>
-      <span style="font-style: italic;"> void Sheet::load_tileset(Image
-        &amp;sheet,const unsigned int row_amount,const unsigned int
-        column_amount);</span> – Load a sprite sheet from the buffer.<br>
+      <span style="font-style: italic;"> void Sheet::load(Image &amp;sheet,const
+        unsigned int row_amount,const unsigned int column_amount);</span> – Load
+      a sprite sheet from the buffer.<br>
       <br>
-      <span style="font-style: italic;">void Sheet::load_tileset(const char
-        *name,const unsigned int row_amount,const unsigned int column_amount);</span>
-      – Load a sprite sheet from tagret file.<br>
+      <span style="font-style: italic;">void Sheet::load(const char *name,const
+        unsigned int row_amount,const unsigned int column_amount);</span> – Load
+      a sprite sheet from tagret file.<br>
       <br>
       <span style="text-decoration: underline;"> Sprite sheet texture</span><br>
       <br>
@@ -953,17 +952,17 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">void Text::load_font(const char *name);</span>
       – Load a font from target file.<br>
       <br>
-      <span style="font-style: italic;"> void Text::draw_character(const char
-        target);</span> – Draw single character at current position.<br>
+      <span style="font-style: italic;"> void Text::print(const char target);</span>
+      – Draw single character at current position.<br>
       <br>
-      <span style="font-style: italic;"> void Text::draw_text(const char
-        *target);</span> – Draw text at current position.<br>
+      <span style="font-style: italic;"> void Text::print(const char *target);</span>
+      – Draw text at current position.<br>
       <br>
-      <span style="font-style: italic;"> void Text::draw_character(const
-        unsigned int x,const unsigned int y,const char target);</span> – Draw
-      single character at specific position.<br>
+      <span style="font-style: italic;"> void Text::print(const unsigned int
+        x,const unsigned int y,const char target);</span> – Draw single
+      character at specific position.<br>
       <br>
-      <span style="font-style: italic;"> void Text::draw_text(const unsigned int
+      <span style="font-style: italic;"> void Text::print(const unsigned int
         x,const unsigned int y,const char *target);</span> – Draw text at
       specific position.<br>
       <br>
@@ -2285,6 +2284,11 @@ Multimedia API</a>. </big>
       6.4.1 – Collision detection subsystem improved.<br>
       6.4.1.1 – Documentation updated.<br>
       6.4.2 – Image loader improved.<br>
+      6.4.3 – Base sprite subsystem improved.<br>
+    </big><big>6.4.4 – Ordinary sprite subsystem improved.<br>
+      6.4.5 – </big><big>6.4.6 –</big><big> Background subsystem improved.<br>
+      6.4.7 – Sprite sheet subsystem improved.<br>
+      6.4.8 – 6.4.9 – Text drawing subsystem improved.<br>
     </big>
     <p></p>
   </body>
