Resource manager improved

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -313,6 +313,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -1225,12 +1226,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -1251,21 +1250,20 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       functions. All these functions declared in <span style="font-style: italic;">Resource</span>
       sub–namespace.<br>
       <br>
-      <span style="font-style: italic;"> create_resource</span> function create
-      single resource or terminate the program if operation failed. It didn't
-      take argument and return handle of the resource.<br>
+      <span style="font-style: italic;"> create</span> function create single
+      resource or terminate the program if operation failed. It didn't take
+      argument and return handle of the resource.<br>
       <br style="font-style: italic;">
-      <span style="font-style: italic;"> create_resource_array</span> function
-      create resource array or terminate the program if operation failed. It
-      takes resource amount as argument and return handle of resource array.<br>
+      <span style="font-style: italic;"> create_array</span> function create
+      resource array or terminate the program if operation failed. It takes
+      resource amount as argument and return handle of resource array.<br>
       <br>
-      <span style="font-style: italic;"> delete_resource</span> function delete
-      resource if it already exists. This function takes resource handle as
-      argument.<br>
+      <span style="font-style: italic;"> destroy</span> function delete resource
+      if it already exists. This function takes resource handle as argument.<br>
       <br>
-      <span style="font-style: italic;"> delete_resource_array</span> function
-      delete resource array if it already exists. This function takes resource
-      array handle as argument.<br>
+      <span style="font-style: italic;"> destroy_array</span> function delete
+      resource array if it already exists. This function takes resource array
+      handle as argument.<br>
     </big>
     <h1><a name="mozTocId590919" class="mozTocH1"></a><big> Part 7. Binary files</big></h1>
     <h2><a name="mozTocId200879" class="mozTocH2"></a><big>Chapter 1. The
@@ -2285,6 +2283,7 @@ Multimedia API</a>. </big>
       6.5.1 – Background subsystem improved.<br>
       6.5.2 – Sprite sheet subsystem improved.<br>
       6.5.3 – 6.5.4 – Text drawing subsystem improved.<br>
+      6.5.5 – Resource manager improved.<br>
     </big>
     <p></p>
   </body>
