Processor usage reduced

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2284,6 +2284,7 @@ Multimedia API</a>. </big>
       6.5.2 – Sprite sheet subsystem improved.<br>
       6.5.3 – 6.5.4 – Text drawing subsystem improved.<br>
       6.5.5 – Resource manager improved.<br>
+      6.5.6 – Processor usage reduced.<br>
     </big>
     <p></p>
   </body>
