--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2285,7 +2285,7 @@ Multimedia API</a>. </big>
       6.5.3 – 6.5.4 – Text drawing subsystem improved.<br>
       6.5.5 – Resource manager improved.<br>
       6.5.6 – Processor usage reduced.<br>
-      6.5.7 – Small changes.<br>
+      6.5.7 – 6.5.8 – Small changes.<br>
     </big>
     <p></p>
   </body>
