Source code synced with Gray game development kit 2.2.7

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -291,7 +291,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;"> Windows XP support</span><br>
       <br>
       You need one of follow compilers for Windows XP support:<br>
-      <br>
     </big>
     <ul>
       <li><big>TDM–GCC</big></li>
@@ -301,10 +300,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <li><big>Visual C++ 2008<br>
         </big></li>
     </ul>
-    <big> </big><big><span style="text-decoration: underline;">Windows SDK</span><br>
+    <big><br>
+      <span style="text-decoration: underline;">Windows SDK and DirectX SDK</span><br>
       <br>
-      You need <a href="https://www.microsoft.com/download/details.aspx?id=8279">Windows
-        SDK for Windows 7 and .NET Framework 4</a> if you using Visual C++ 2005.<br>
+      You need <a href="https://www.microsoft.com/en-us/download/details.aspx?id=15656">Windows
+        Server 2003 SP1 Platform SDK</a> and DirectX SDK February 2005 if you
+      using Visual C++ 2005.<br>
       <br>
       <span style="text-decoration: underline;"> Compiler optimization</span><br>
       <br>
@@ -1225,12 +1226,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2296,6 +2295,7 @@ Multimedia API</a>. </big>
       6.5.6 – Processor usage reduced.<br>
       6.5.7 – 6.5.8 – Small changes.<br>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
+      6.6 – Source code synced with Gray game development kit 2.2.7.<br>
     </big>
     <p></p>
   </body>
