--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -61,7 +61,8 @@
         <ul>
           <li><a href="#mozTocId648026">Chapter 1. The sub–namespace</a></li>
           <li><a href="#mozTocId909723">Chapter 2. Memory</a></li>
-          <li><a href="#mozTocId950985">Chapter 3. Multimedia</a></li>
+          <li><a href="#mozTocId907298">Chapter 3. Sound</a></li>
+          <li><a href="#mozTocId950985">Chapter 4. Multimedia</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId209024">Part 6. Misc</a>
@@ -97,6 +98,7 @@
           <li><a href="#mozTocId472209">Chapter 4. Game–pad</a></li>
           <li><a href="#mozTocId804583">Chapter 5. Input</a></li>
           <li><a href="#mozTocId692266">Chapter 6. Multimedia</a></li>
+          <li><a href="#mozTocId60413">Chapter 7. Sound</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId78453">Version history</a></li>
@@ -166,7 +168,7 @@
     <big> <span style="text-decoration: underline;"> Eugene game development
         kit license</span><br>
       <br>
-      Copyright (C) 2021 – 2022 Popov Evgeniy Alekseyevich<br>
+      Copyright (C) 2021 – 2023 Popov Evgeniy Alekseyevich<br>
       <br>
       This software is provided 'as–is', without any express or implied<br>
       warranty. In no event will the authors be held liable for any damages<br>
@@ -382,7 +384,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -593,7 +594,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -945,8 +945,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     </big><big><span style="font-style: italic;"> void Text::set_height(const
         unsigned int height);</span> – Set the font height.</big><br>
     <big> <br>
-      <span style="font-style: italic;">void Text::set_setting(const unsigned int
-        width,const unsigned int height,const EUGENEGDK::TEXT_KIND kind);</span>
+      <span style="font-style: italic;">void Text::set_setting(const unsigned
+        int width,const unsigned int height,const EUGENEGDK::TEXT_KIND kind);</span>
       – Set text output settings.<br>
       <br>
       <span style="font-style: italic;"> void Text::load_font(Image *font);</span>
@@ -1117,14 +1117,31 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         memory</a> size in bytes.<br>
       <br>
       <span style="font-style: italic;"> unsigned long int Memory::get_usage();</span>
-      – Return percentage of physical memory usage. <br>
+      – Return percentage of physical memory usage.<br>
     </big>
-    <h2><a name="mozTocId950985" class="mozTocH2"></a><big>Chapter 3. Multimedia</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId907298"></a><big>Chapter 3. Sound</big></h2>
+    <big><span style="text-decoration: underline;">Simple sound subsystem</span><br>
+      <br>
+      Sound subsystem intend for playing <a href="https://en.wikipedia.org/wiki/Wav">Waveform
+        Audio File Format</a> sounds.<br>
+      <br>
+      <span style="text-decoration: underline;">Working with sound</span><br style="text-decoration: underline;">
+      <br>
+      Sound subsystem implemented as few macros.<br>
+      <br>
+      <span style="font-style: italic;">SOUND_STOP</span> stop playing all
+      sounds. It didn't take arguments.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">SOUND_PLAY</span> play a sound once. It
+      takes string literal as argument.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">MUSIC_PLAY</span> play a sound in loop.
+      It takes string literal as argument.<span style="text-decoration: underline;"></span><br>
+    </big>
+    <h2><a name="mozTocId950985" class="mozTocH2"></a><big>Chapter 4. Multimedia</big></h2>
     <big><span style="text-decoration: underline;">Improve your game</span><br>
       <br>
-      What are good things for a video games? A sounds and video. The sound can
-      improve game atmosphere. The video is very useful as splash between game
-      levels. It can use for show game story.<br>
+      Multimedia subsystem intend for playing audio and video.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Supported formats</span><br>
       <br>
@@ -1958,12 +1975,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       sub–namespace.</big><br>
     <big> </big>
     <h2><a name="mozTocId472209" class="mozTocH2"></a><big>Chapter 4. Game–pad</big></h2>
-    <big><br>
-      Game–pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
+    <big> Game–pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
 Multimedia API</a>. </big>
     <h2><a name="mozTocId804583" class="mozTocH2"></a><big>Chapter 5. Input</big></h2>
-    <big><br style="text-decoration: underline;">
-      <span style="text-decoration: underline;"> Input back–end</span><br>
+    <big> <span style="text-decoration: underline;"> Input back–end</span><br>
       <br>
       Keyboard and mouse input subsystems are simple. It works over standard
       Windows API.<br>
@@ -1989,11 +2004,16 @@ Multimedia API</a>. </big>
         </tr>
       </tbody>
     </table>
-    <big> </big>
+    <big> </big> <br>
     <h2><a name="mozTocId692266" class="mozTocH2"></a><big>Chapter 6. Multimedia</big></h2>
     <big> Multimedia subsystem working over <a href="https://docs.microsoft.com/en-us/windows/desktop/DirectShow/directshow">DirectShow</a>.
-      It is available as part of <a href="https://docs.microsoft.com/en-us/windows/desktop/directx-sdk--august-2009-">DirectX</a>.
-      DirectX is pre–installed by default under modern versions of Windows. </big>
+      It is available as part of <a href="https://en.wikipedia.org/wiki/DirectX">DirectX</a>.
+      DirectX is pre–installed by default under modern versions of Windows.<br>
+    </big>
+    <h2><a class="mozTocH2" name="mozTocId60413"></a><big>Chapter 7. Sound</big></h2>
+    <big>Sound subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd743606%28v=vs.85%29.aspx">Windows
+        Multimedia</a>.<br>
+    </big>
     <h1><a name="mozTocId78453" class="mozTocH1"></a><big>Version history</big></h1>
     <big> 0.1 – Initial version.<br>
       0.1.1 – 0.7.6 – Internal unstable builds.<br>
@@ -2304,6 +2324,8 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
+      6.6.2 – Simple sound subsystem ported from Neon game development kit
+      5.7.8.<br>
     </big>
     <p></p>
   </body>
