Small bug in multimedia subsystem fixed

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -316,6 +316,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -594,6 +595,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
+
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -1220,7 +1222,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Checking play status and restart play if needed.<br>
       <br>
       <span style="font-style: italic;"> void Multimedia::stop();</span> – Stop
-      playing a content of the target file.<br>
+      playing a content of the target file and close video if needed.<br>
       <br>
       <span style="font-style: italic;"> bool Multimedia::check_playing();</span>
       – Return true if the multimedia resource is playing.</big><br>
@@ -2297,7 +2299,7 @@ Multimedia API</a>. </big>
       6.2.9 – Small changes.<br>
       6.3 – Base sprite subsystem improved.<br>
       6.3.1 – 6.3.2 – Small changes.<br>
-      6.3.3 – Base graphics subsystem ported from Neon game development kit
+      6.3.3 – Base graphics subsystem back-ported from Neon game development kit
       5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
       6.3.5 – Small changes.<br>
@@ -2324,8 +2326,10 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem ported from Neon game development kit
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
       5.7.8.<br>
+      6.6.3 – Small bug in multimedia subsystem fixed.<br>
+      6.6.4 – 6.6.6 – Small changes.<br>
     </big>
     <p></p>
   </body>
